feat: Many improvements